<resources>
    <string name="app_name">YTranslator</string>

    <string name="text_translator">Переводчик</string>
    <string name="text_mark">История</string>
    <string name="text_about">О приложении</string>

    <string name="history_tab">История</string>
    <string name="favorites_tab">Избранное</string>

    <string name="hint_translator_edit_text">Введите текст</string>
    <string name="hint_search_edit_text">Введите запрос</string>
    <string name="hint_result_text">Перевод</string>

    <string name="about">Приложение разработано в качестве тестового задания для поступления в
        Школу мобильной разработки Яндекса в рамках проекта \"Мобилизация\".
        \nДля перевода использовались сервисы \"Яндекс Переводчик\": translate.yandex.ru
        \nи \"Яндекс Словарь\": tech.yandex.ru/dictionary</string>

    <string name="api_help">Переведено сервисом \"Яндекс.Переводчик\"\nРеализовано с помощью сервиса \"Яндекс.Словарь\"</string>
    <string name="version">Версия 1.0</string>

    <array name="settings_language_entries">
        <item>Русский</item>
        <item>Английский</item>
    </array>

    <array name="settings_language_entries_values">
        <item>ru</item>
        <item>en</item>
    </array>
    
    <array name="list_languages">
        <item>Русский</item>
        <item>Английский</item>
        <item>Африкаанс</item>
        <item>Амхарский</item>
        <item>Арабский</item>
        <item>Азербайджанский</item>
        <item>Башкирский</item>
        <item>Белорусский</item>
        <item>Болгарский</item>
        <item>Бенгальский</item>
        <item>Боснийский</item>
        <item>Каталанский</item>
        <item>Себуанский</item>
        <item>Чешский</item>
        <item>Валлийский</item>
        <item>Датский</item>
        <item>Немецкий</item>
        <item>Греческий</item>
        <item>Эсперанто</item>
        <item>Испанский</item>
        <item>Эстонский</item>
        <item>Баскский</item>
        <item>Персидский</item>
        <item>Финский</item>
        <item>Французский</item>
        <item>Ирландский</item>
        <item>Шотландский</item>
        <item>Галисийский</item>
        <item>Гуджарати</item>
        <item>Иврит</item>
        <item>Хинди</item>
        <item>Хорватский</item>
        <item>Гаитянский</item>
        <item>Венгерский</item>
        <item>Армянский</item>
        <item>Индонезийский</item>
        <item>Исландский</item>
        <item>Итальянский</item>
        <item>Японский</item>
        <item>Яванский</item>
        <item>Грузинский</item>
        <item>Казахский</item>
        <item>Каннада</item>
        <item>Корейский</item>
        <item>Киргизский</item>
        <item>Латынь</item>
        <item>Люксембургский</item>
        <item>Литовский</item>
        <item>Латышский</item>
        <item>Малагасийский</item>
        <item>Марийский</item>
        <item>Маори</item>
        <item>Македонский</item>
        <item>Малаялам</item>
        <item>Монгольский</item>
        <item>Маратхи</item>
        <item>Горномарийский</item>
        <item>Малайский</item>
        <item>Мальтийский</item>
        <item>Непальский</item>
        <item>Голландский</item>
        <item>Норвежский</item>
        <item>Панджаби</item>
        <item>Папьяменто</item>
        <item>Польский</item>
        <item>Португальский</item>
        <item>Румынский</item>
        <item>Сингальский</item>
        <item>Словацкий</item>
        <item>Словенский</item>
        <item>Албанский</item>
        <item>Сербский</item>
        <item>Сунданский</item>
        <item>Шведский</item>
        <item>Суахили</item>
        <item>Тамильский</item>
        <item>Телугу</item>
        <item>Таджикский</item>
        <item>Тайский</item>
        <item>Тагальский</item>
        <item>Турецкий</item>
        <item>Татарский</item>
        <item>Удмуртский</item>
        <item>Украинский</item>
        <item>Урду</item>
        <item>Узбекский</item>
        <item>Вьетнамский</item>
        <item>Коса</item>
        <item>Идиш</item>
        <item>Китайский</item>
    </array>
</resources>
